server/.happypack/s-99544725
SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/Blocks/Blocks.js: Unexpected token, expected , (87:89)

[0m [90m 85 | [39m        [36mreturn[39m(
 [90m 86 | [39m            [33m<[39m[33mdiv[39m className[33m=[39m[32m"blocksContainer"[39m[33m>[39m
[31m[1m>[22m[39m[90m 87 | [39m                [33m<[39m[33mdiv[39m className[33m=[39m[32m"blocks"[39m onWheel[33m=[39m{[36mthis[39m[33m.[39mwheelHandle[33m.[39mbind([36mthis[39m[33m,[39m[33m<[39m[33meven[39m[33m>[39m[33m<[39m[33m/[39m[33meven[39m[33m>[39mt)}[33m>[39m
 [90m    | [39m                                                                                         [31m[1m^[22m[39m
 [90m 88 | [39m                    [33m<[39m[33mSlider[39m ref[33m=[39m{c [33m=>[39m [36mthis[39m[33m.[39mslider [33m=[39m c } {[33m...[39msettings}[33m>[39m
 [90m 89 | [39m                        {sliderContent}
 [90m 90 | [39m                    [33m<[39m[33m/[39m[33mSlider[39m[33m>[39m[0m

BabelLoaderError: SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/Blocks/Blocks.js: Unexpected token, expected , (87:89)

[0m [90m 85 | [39m        [36mreturn[39m(
 [90m 86 | [39m            [33m<[39m[33mdiv[39m className[33m=[39m[32m"blocksContainer"[39m[33m>[39m
[31m[1m>[22m[39m[90m 87 | [39m                [33m<[39m[33mdiv[39m className[33m=[39m[32m"blocks"[39m onWheel[33m=[39m{[36mthis[39m[33m.[39mwheelHandle[33m.[39mbind([36mthis[39m[33m,[39m[33m<[39m[33meven[39m[33m>[39m[33m<[39m[33m/[39m[33meven[39m[33m>[39mt)}[33m>[39m
 [90m    | [39m                                                                                         [31m[1m^[22m[39m
 [90m 88 | [39m                    [33m<[39m[33mSlider[39m ref[33m=[39m{c [33m=>[39m [36mthis[39m[33m.[39mslider [33m=[39m c } {[33m...[39msettings}[33m>[39m
 [90m 89 | [39m                        {sliderContent}
 [90m 90 | [39m                    [33m<[39m[33m/[39m[33mSlider[39m[33m>[39m[0m

    at transpile (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:63:13)
    at Object.module.exports (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:163:20)
    at applySyncOrAsync (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:116:3)